# inktty

./: .gitignore  .gitmodules  README.md  config.h.in  meson.build  meson_cross_arm.build
config/: example_black_and_white  example_solarized
inktty/: inktty.cpp  inktty.hpp  main.cpp  main_fbdev.cpp  main_sdl.cpp
inktty/backends/: fbdev.cpp  fbdev.hpp  kbdstdin.cpp  kbdstdin.hpp  sdl.cpp  sdl.hpp
inktty/config/: argparse.cpp  argparse.hpp  configuration.cpp  configuration.hpp  toml.cpp  toml.hpp
inktty/events/: events.cpp  events.hpp
inktty/fontdata/: font_8x16.c  font_8x16.h
inktty/gfx/: color.cpp  color.hpp  display.cpp  display.hpp  dither.cpp  dither.hpp  epaper_emulation.cpp  epaper_emulation.hpp  font.cpp  font.hpp  font_bitmap.cpp  font_bitmap.hpp  font_cache.cpp  font_cache.hpp  font_ttf.cpp  font_ttf.hpp  geometry.hpp  matrix.cpp  matrix.hpp  matrix_renderer.cpp  matrix_renderer.hpp
inktty/lib/: mxcfb.h
inktty/term/: events.cpp  events.hpp  matrix.cpp  matrix.hpp  pty.cpp  pty.hpp  vt100.cpp  vt100.hpp  vterm.cpp  vterm.hpp
inktty/utils/: ansi_terminal_writer.cpp  ansi_terminal_writer.hpp  color.cpp  color.hpp  geometry.cpp  geometry.hpp  logger.cpp  logger.hpp  utf8.cpp  utf8.hpp
lib/: mxcfb.h
subprojects/: termkey.wrap  unibilium.wrap  vterm.wrap  vtparse.wrap
test/term/: test_matrix.cpp
test/utils/: test_color.cpp  test_utf8.cpp
tools/: .gitignore  Makefile  main_epaper_emulation.cpp  main_mxcfb_test_update_modes.cpp
